Fix footer links on small screens

--- a/src/components/css/Footer.scss
+++ b/src/components/css/Footer.scss
@@ -9,6 +9,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    top: calc(100% - 6rem);
     height: auto;
     text-align: center;
   }
@@ -18,6 +19,7 @@
 }
 .social-links {
   display: inline-flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 0.5rem;
